Use Base64 encoder of java util